# AlekhinSergeyLabs

./: .gitignore  AlekhinLabs.sln  CMakeLists.txt  README.md  docker-compose.yml  main.py  package-lock.json  package.json  st_graphml.graphml  tsconfig.json
1/: main.py
CR/: CR.py
Course/: TSR.COM  Алгоритмы.vsd  Листинг.docx  ОП.docx  ПМИ.docx  РП.docx  РСП.docx  Схема взаимодействия.vsd  ТЗ.docx  ТО.docx
DZ/: Bus.cpp  Bus.h  Bus.txt  ClassDiagram.cd  DZ.cpp  DZ.csproj  DZ.vcxproj  DZ.vcxproj.filters  Form1.Designer.cs  Form1.cs  Menu.cpp  MinMax.cs  ParallelSearchResult.cs  ParallelSearchThreadParam.cs  Program.cs  SubArrays.cs  TestFile.txt  index.js  package-lock.json  package.json  tsconfig.json
Hw/: Hw.cpp  Hw.vcxproj  Hw.vcxproj.filters
Lab1/: .gitignore  Func.cpp  Func.h  Lab1.cpp  Lab1.csproj  Lab1.vcxproj  Lab1.vcxproj.filters  Planets.txt  Program.cs  main.py
Lab2/: 2.1.bat  2.2.bat  Circle.cs  ClassDiagram.cd  Func.cpp  Func.h  GeometricFigure.cs  IPrint.cs  Lab2.cpp  Lab2.csproj  Lab2.vcxproj  Lab2.vcxproj.filters  Program.cs  Rectangle.cs  Square.cs  main.py
Lab2.1/: Lab2.1.cpp  Lab2.1.vcxproj
Lab2.2/: Lab2.2.cpp  Lab2.2.vcxproj
Lab2.3/: Lab2.3.cpp  Lab2.3.vcxproj  Lab2.3.vcxproj.filters
Lab2.4/: Lab2.4.cpp  Lab2.4.vcxproj
Lab3/: ClassDiagram.cd  Lab3.cpp  Lab3.csproj  Lab3.vcxproj  Program.cs  SimpleList.cs  SimpleStack.cs  SparseMatrix.cs  lab3.asm
Lab4/: ClassDiagram.cd  Form1.Designer.cs  Form1.cs  Lab4.cpp  Lab4.csproj  Lab4.vcxproj  Lab4.vcxproj.filters  MySet.cpp  MySet.h  TestFile.txt  Vector.cpp  Vector.h  lab4.asm
(+288 files in other folders)
